--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +13,8 @@
     "express": "^4.17.1",
     "pg": "^7.17.0",
     "redis": "^2.8.0"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0"
   }
 }
