--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,12 +51,11 @@ jobs:
       - run:
           name: build and tag the image
           command: |
-              docker build -f Node/Dockerfile 
-              docker build -t htysn21/api:latest
+              docker build -f Node/Dockerfile -t htysn21/api:latest
       - run:
           name: publish image to docker hub
           command: |
-              docker login -u "hugotysn21" -p
+              echo "$DOCKER_HUB_PASS" | docker login -u "hugotysn21" --password-stdin
               docker push htysn21/api:latest
 
 workflows:
