--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
       - run:
           name: build and tag the image
           command: |
-              docker build -f Node/Dockerfile -t api:latest
+              docker build -f Node/Dockerfile | -t api:latest
       - run:
           name: publish image to docker hub
           command: |
