--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -6,10 +6,9 @@ ENV PORT 3000
 #WORKDIR /usr/src/app
 WORKDIR /home/api
 RUN chown -R node:node /home/api
-
+USER node
 #Install dependencies app
-COPY package*.json ./
-
+COPY package*.json /
 RUN npm install
 
 EXPOSE 3000
